--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
     <script>
         //https://script.google.com/macros/s/AKfycbxVubyGue-iMYn1jcyNmtFXGxdC8FkIt4gh4tro_j4U8fOT6LIZAc6rNNwCGy2ffbvprw/exec ***
-        const SCRIPT_URL = '您的Google Apps Script Web App URL';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxVubyGue-iMYn1jcyNmtFXGxdC8FkIt4gh4tro_j4U8fOT6LIZAc6rNNwCGy2ffbvprw/exec';
 
         const uploadForm = document.getElementById('uploadForm');
         const photoFile = document.getElementById('photoFile');
